<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="?homeAsUpIndicator"
        app:title="@string/country_name"
        app:titleCentered="true"
        android:layout_marginTop="10dp"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <eu.cryptoapp.explorecountry.presentation.MyPictureRow
                android:id="@+id/pictureRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

<!--            <ImageView-->
<!--                android:id="@+id/iv_image"-->
<!--                android:layout_width="400dp"-->
<!--                android:layout_height="150dp"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:contentDescription="Quiz Image"-->
<!--                tools:src="@drawable/nija_flag"-->
<!--                android:layout_marginBottom="10dp"/>-->



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/tv_population"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/population"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tv_population_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text=""
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tv_region"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/region"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tv_region_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text=""
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tv_capital"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/capital"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tv_capital_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text=""
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
        />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:id="@+id/tv_official_lang"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/official_language"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/tv_official_lang_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text=""
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tv_demonym"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/demonym"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/tv_demonym_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text=""
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tv_un_member"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/un_member"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tv_un_member_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text=""
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:id="@+id/tv_independent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/independent"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tv_independent_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text=""
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tv_area"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/area"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tv_area_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text=""
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/currency"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/tv_currency_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text=""
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:id="@+id/tv_time_zone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/time_zone"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tv_time_zone_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text=""
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tv_driving_side"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/driving_side"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/tv_driving_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text=""
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:id="@+id/tv_geographical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/geographical_location"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/tv_geographical_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text=""
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    </LinearLayout>

</ScrollView>