<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".presentation.MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:gravity="left"
            android:textStyle="bold"
            android:fontFamily="@font/elsie_swash_caps_black"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/dot"
            android:textColor="@color/orange"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_switch"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/btn_sun"
            android:backgroundTint="@color/white"
            android:contentDescription="sun_image" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:background="@drawable/btn_bg">

        <ImageButton
            android:layout_width="22dip"
            android:layout_height="22dip"
            android:layout_marginStart="15dp"
            android:contentDescription="search_image"
            android:layout_marginTop="10dp"
            android:background="@drawable/img_search" />


        <EditText
            android:id="@+id/search_country"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:gravity="center"
            android:hint="@string/search_country"
            android:background="@drawable/btn_bg"
            android:autofillHints=""
            android:inputType="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/preferred_lang"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:text="@string/en"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/btn_en"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/filter_btn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="0dp"
            android:text="@string/filter"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:drawableLeft="@drawable/btn_filter"
            android:backgroundTint="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <eu.cryptoapp.explorecountry.presentation.MyComposeListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>